--- a/src/main/resources/assets/lcm-atg/lang/en_US.lang
+++ b/src/main/resources/assets/lcm-atg/lang/en_US.lang
@@ -1,6 +1,15 @@
+
+//Creative tabs
 itemGroup.tardis.name=TARDIS Blocks
 itemGroup.sonics.name=Sonics
+
+//Super-powers
 superpower.timelord.name=Timelord
+
+//Items
+item.fourthdocsonic.name=Fourth Doctors sonic
+
+
 lcm-atg.abilities.bouncy.name=Trait: Bouncy
 lcm-atg.abilities.bouncy.desc=Take slightly less damage from falling
 lcm-atg.abilities.lucky.name=Trait: Lucky
