Some blocks, more to come. Although Grayson needs to fix Itemblocks

--- a/src/main/resources/assets/lcm-atg/lang/en_US.lang
+++ b/src/main/resources/assets/lcm-atg/lang/en_US.lang
@@ -1,7 +1,7 @@
 
 //Creative tabs
-itemGroup.tardis.name=TARDIS Blocks
-itemGroup.sonics.name=Sonics
+itemGroup.tardis=TARDIS Blocks
+itemGroup.sonics=Sonics
 
 //Super-powers
 superpower.timelord.name=Timelord
