--- a/src/main/resources/assets/lcm-atg/lang/en_US.lang
+++ b/src/main/resources/assets/lcm-atg/lang/en_US.lang
@@ -7,8 +7,9 @@ itemGroup.sonics=Sonics
 superpower.timelord.name=Timelord
 
 //Items
-item.fourthdocsonic.name=Fourth Doctors sonic
+item.sonic_fourth_doc.name=Fourth Doctors sonic
 item.chameleonArch.name=Chameleon Arch
+item.cane_first_doc.name=First Doctor cane
 
 //Blocks
 tile.classicroundela.name=Classic Roundel A
