Fixing a bunch of small things
Also added snapshot configuration to the build.gradle to make testing with hydro a bit easier

--- a/src/main/resources/assets/lcm-atg/lang/en_US.lang
+++ b/src/main/resources/assets/lcm-atg/lang/en_US.lang
@@ -83,7 +83,7 @@ lcm-atg.messages.numsuffix.0=st
 lcm-atg.messages.numsuffix.1=nd
 lcm-atg.messages.numsuffix.2=rd
 lcm-atg.messages.numsuffix.ext=th
-lcm-atg.messages.newLife=You've got a new life, with new traits: %s.
+//lcm-atg.messages.newLife=You've got a new life, with new traits: %s.
 lcm-atg.messages.transfer=You've transferred one of your regenerations into the arch
 lcm-atg.messages.transfer.fullArch=You can't store anymore regenerations in this arch
 lcm-atg.messages.transfer.emptyArch=This arch is empty!
